--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
             <div class="latest-grid">
                 <article class="card">
                     <h3>Gallery — New Photos</h3>
-                    <p>Fresh images from recent shoots and projects. Browse highlights and full albums in the gallery.</p>
+                    <p>Browse highlights and full albums in the gallery.</p>
                     <a class="btn" href="gallery.html">View Gallery</a>
                 </article>
                 <article class="card">
                     <h3>Videos — Recent Uploads</h3>
-                    <p>New videos and clips uploaded recently — watch the latest highlights and walkthroughs.</p>
+                    <p>Watch the latest highlights.</p>
                     <a class="btn" href="videos.html">Watch Videos</a>
                 </article>
             </div>
