--- a/videos.html
+++ b/videos.html
@@ -3,46 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Videos</title>
-    <link rel="stylesheet" href="css/about.css">
+    <title>Videos — Redirect</title>
+    <meta http-equiv="refresh" content="0;url=gallery.html#videos">
     <link rel="icon" type="image/png" sizes="32x32" href="images/Icon.png">
 </head>
 <body>
-<nav class="navbar">
-    <ul>
-        <li><a href="https://twrilz.github.io/zzr/index.html">Home</a></li>
-        <li><a href="https://twrilz.github.io/zzr/gallery.html">Gallery</a></li>
-        <li><a href="https://twrilz.github.io/zzr/videos.html" class="active">Videos</a></li>
-        <li><a href="https://twrilz.github.io/zzr/about.html">About</a></li>
-        <li><a href="https://twrilz.github.io/zzr/contact.html">Contact</a></li>
-    </ul>
-</nav>
-
-<!-- Video Gallery Section -->
-<div class="video-gallery">
-    <h2>Videos</h2>
-    <div class="video-panel">
-        <a href="javascript:void(0);" onclick="openModal('images/Videos/sunset.mp4', 'Sunset Video')" data-caption="Sunset Video">
-            <video src="images/Videos/sunset.mp4" alt="Sunset"></video>
-        </a>
-        <!-- Add more videos here -->
-    </div>
-</div>
-
-<!-- Modal -->
-
-<div id="lightbox-modal" class="modal">
-    <div id="modal-caption" class="modal-caption"></div> <!-- Caption goes here -->
-    <img id="modal-image" class="modal-content" alt="Modal Image">
-    <video id="modal-video" class="modal-content" controls></video>
-</div>
-
-<footer class="footer">
-    <p>&copy; <span class="current-year"></span> Zachary | All rights reserved.</p>
-    <p>Follow me on <a href="https://www.instagram.com/_twrilz/">Instagram</a> | <a href="https://github.com/Twrilz">GitHub</a></p>
-</footer>
-
-<script src="js/year.js"></script>
-<script src="js/lightbox.js"></script>
+    <p>Redirecting to <a href="gallery.html#videos">Gallery & Videos</a>…</p>
 </body>
 </html>
