Refactor code structure for improved readability and maintainability

--- a/gallery.html
+++ b/gallery.html
@@ -47,6 +47,12 @@
                 </a>
                 <div class="meta">Road to Ridge, AR</div>
             </div>
+            <div class="media-card">
+                <a href="javascript:void(0);" onclick="openModal('images/image5.JPG', 'Image 5')">
+                    <img src="images/image5.JPG" alt="Sunset - 2/20/2026">
+                </a>
+                <div class="meta">Sunset - 2/20/2026</div>
+            </div>
         </div>
     </section>
 
